--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -72,6 +72,9 @@ section {
     img {
         width: 100%;
     }
+    // .text-different {
+    //     font-family: "Arizonia", "Merriweather Sans", sans-serif;
+    // }
 }
 
 .heading {
